human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_28.wast
(assert_invalid
  (module (func $type-block-value-num-vs-void-after-return
    (block (return) (i32.const 1))
  ))
  "type mismatch"
)